fix VPC configs
